add_subdirectory("UI Helpers")
add_subdirectory(DataStructures)
add_executable(AlgoritmosEstructuras main.c Main.h)
add_executable(Practica2 Practica2.c)
add_executable(Practica3 Practica3.c)
add_executable(Practica4 Practica4.c)
add_executable(Practica5 Practica5.c)
target_link_libraries(Practica3 PUBLIC Arrays UIHelpers)
target_link_libraries(Practica2 PUBLIC Arrays)
target_link_libraries(Practica4 PUBLIC Arrays UIHelpers m)
target_link_libraries(Practica5 PUBLIC Arrays UIHelpers HashTables)
target_include_directories(Practica3 PUBLIC Arrays UIHelpers)
target_include_directories(Practica2 PUBLIC Arrays)
target_include_directories(Practica4 PUBLIC Arrays UI Helpers)