add_subdirectory("UI Helpers")
add_subdirectory(DataStructures)
add_executable(AlgoritmosEstructuras main.c Main.h)
add_executable(Practica2 Practica2.c)
add_executable(Practica3 Practica3.c)
add_executable(Practica4 Practica4.c)
add_executable(Practica5 Practica5.c)
add_executable(Practica6 Practica6.c)
add_executable(Practica7 Practica7.c)
add_executable(Tarea3 Tarea3.c DataStructures/Queues/Queues.c ${})
target_link_libraries(Practica3 PUBLIC Arrays UIHelpers)
target_link_libraries(Practica2 PUBLIC Arrays)
target_link_libraries(Practica4 PUBLIC Arrays UIHelpers ${MATH_LIB})
target_link_libraries(Practica5 PUBLIC DataStructures ${MATH_LIB} Arrays LinkedLists UIHelpers)
target_link_libraries(Practica6 PUBLIC LinkedLists UIHelpers ${MATH_LIB})
target_link_libraries(Practica7 PUBLIC LinkedLists UIHelpers)
target_include_directories(Practica3 PUBLIC Arrays UIHelpers)
target_include_directories(Practica2 PUBLIC Arrays)
target_include_directories(Practica4 PUBLIC Arrays UI Helpers)
target_include_directories(Practica5 PUBLIC DataStructures UIHelpers)
target_include_directories(Practica6 PUBLIC LinkedLists UIHelpers)
target_include_directories(Practica7 PUBLIC LinkedLists UIHelpers)